tests/invalid/proc_without_return.lang
fn return_int() -> i32 {

}
